Closed
Bug 257433
Opened 21 years ago
Closed 21 years ago
MacOS X/Libart: colors messed up; red missing
Categories
(Core :: SVG, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jay, Assigned: tor)
References
()
Details
(Whiteboard: helpwanted)
Attachments
(1 file, 1 obsolete file)
|
3.96 KB,
patch
|
jhpedemonte
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.7) Gecko/20040702
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.7) Gecko/20040702
when comparing the graphical representation of the uri, in moz asv3 this appears
to be RGB semi-opaque circles however in mozSVG red gamut is missing.
so we see Blue Magenta Cyan
this problem has been present for some time, more than 12 months, and I expect
this is a dupe. apologies
Reproducible: Always
Steps to Reproduce:
1.visit URI using mozSVG and moz + asv3
2.observe colour gamut
3.
Actual Results:
displayed colours are 'wrong'
Expected Results:
RGB
| Reporter | ||
Comment 1•21 years ago
|
||
http://www.peepo.co.uk/launch/love.svg
an apparent cyan opacity layer is displayed on the top, it isn't in the code...
ie the grey/brown background is cyan, etc
strangely the 'white' moon remains white...
this is perhaps a better description, than 'red gamut missing' though the effect
is much the same....
so you can see I'm not too clear about what the exact colour effect is, but it
is awful.
WFM Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8a3) Gecko/20040829
--enable-svg --enable-svg-renderer-gdiplus
Can anyone not on OS X but using libart reproduce the bug?
Comment 3•21 years ago
|
||
MacOS X doesn't have native 24bpp bitmaps as required by libart.
mozilla/layout/svg/renderer/src/libart/nsSVGLibartBitmapMac.cpp needs to be
changed from using to gfxIImageFrame to a custom 24bpp format + blitting code.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: color gamut significantly skewed towards cyan: red missing → MacOS X/Libart: colors messed up; red missing
Whiteboard: helpwanted
Comment 4•21 years ago
|
||
Mass reassign of SVG bugs that aren't currently being worked on by Alex to
general@svg.bugs. If you think someone should be assigned to your bug you can
join the #svg channel on mozilla.org's IRC server ( irc://irc.mozilla.org/svg )
where you can try to convince one of the SVG hackers to work on it. We aren't
always there, so if you don't get a response straight away please try again later.
Assignee: alex → general
| Reporter | ||
Comment 5•21 years ago
|
||
It might be that this bug 'depends on' bug
http://bugzilla.mozilla.org/show_bug.cgi?id=214912
"Implement the SVG rendering back end using Quartz 2D"
tor is building...
Attachment #159048 -
Flags: review?(jhpedemonte)
Attachment #159048 -
Flags: review?(jhpedemonte)
Attachment #159048 -
Attachment is obsolete: true
Attachment #159107 -
Flags: review?(jhpedemonte)
Updated•21 years ago
|
Attachment #159107 -
Flags: review?(jhpedemonte) → review+
Checking in nsSVGLibartBitmapMac.cpp;
/cvsroot/mozilla/layout/svg/renderer/src/libart/nsSVGLibartBitmapMac.cpp,v <--
nsSVGLibartBitmapMac.cpp
new revision: 1.7; previous revision: 1.6
done
Checking in nsSVGLibartCanvas.cpp;
/cvsroot/mozilla/layout/svg/renderer/src/libart/nsSVGLibartCanvas.cpp,v <--
nsSVGLibartCanvas.cpp
new revision: 1.5; previous revision: 1.4
done
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•