Bug 257433 - fix color channels on libart/OS-X.  r=pedemonte